--- a/women.html
+++ b/women.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <video width="320" height="240" controls>
+    <video controls autoplay width="5050" height="500" controls>
         <source src="Womenmemetemplate.mp4" type="video/mp4">
         Error Message
       </video>
