--- a/women.html
+++ b/women.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="3;url=http://example.com/" />
+    <meta http-equiv="refresh" content="10;url=https://namant43fg.github.io/garments/" />
     <title>Document</title>
 </head>
 <body>
